# trace

./: .gitignore  Ministral_3_(3B)_Reinforcement_Learning_Sudoku_Game.ipynb  prompt.py  pyproject.toml
tracez3/: .gitignore  __init__.py  control_temp.c  control_temp.py  control_temp_z3.py  dummy.c  dummy.py  dummy_z3.py  reward_utils.py  trace.py  train.py  xor.c  xor.py  xor_z3.py
